--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -5,5 +5,10 @@
         <!-- Customize your theme here. -->
         <item name="android:textColor">#000000</item>
     </style>
-
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/background_splash</item>
+        <item name="colorPrimaryDark">@color/dark</item>
+        <item name="android:statusBarColor">@color/dark</item>
+        <item name="colorPrimary">@color/dark</item>
+    </style>
 </resources>
