--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -5,8 +5,8 @@
     android:layout_height="match_parent"
     android:background="@color/dark"
     android:gravity="center">
-    <ImageView
-        android:layout_width="297dp"
-        android:layout_height="210dp"
-        android:src="@mipmap/icon" />
+<!--    <ImageView-->
+<!--        android:layout_width="297dp"-->
+<!--        android:layout_height="210dp"-->
+<!--        android:src="@mipmap/icon" />-->
 </LinearLayout>
